--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-font": "^11.4.0",
+    "expo-linking": "^5.0.2",
+    "expo-router": "2.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
