--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.9",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
