--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-RAPID_API_KEY=c3e9443811msh9092ec179039818p1c80adjsnde35f9d772e7
+RAPID_API_KEY=c3e9443811msh9092ec179039818p1c80adjsnde35f9d772e7 # NO MORE CREDIT
 
 RAPID_API_KEY=8d926b198emshbca834b637a93c6p1fb9b2jsnb38e64fc6ca1
