--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native": "0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
