Added bottom bar navigation and icons + api

--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@ RAPID_API_KEY1=c3e9443811msh9092ec179039818p1c80adjsnde35f9d772e7 # RAN OUT OF C
 
 RAPID_API_KEY2=8d926b198emshbca834b637a93c6p1fb9b2jsnb38e64fc6ca1 # RAN OUT OF CREDIT
 
-RAPID_API_KEY3=1c177026e7msh7d320f6283baf4bp12b532jsn7a0790fa7b5a
+RAPID_API_KEY3=1c177026e7msh7d320f6283baf4bp12b532jsn7a0790fa7b5a # RAN OUT lol o|o
 
 RAPID_API_KEY4=84359832f9mshbe0264e34594161p1f0b86jsn4d30864046b4
 
 RAPID_API_KEY5=e5f81214fcmshe5107f77c8362a2p18dfc8jsne686e16a09ad
 
 RAPID_API_KEY5=f571d69644msh6ea6bc92f2af70ep13e9f6jsn5d571722bce9 # RAN OUT OF CREDIT
+
+RAPID_API_KEY5=82ac1d515fmsh325ae218e736854p195b07jsn6c5ada8cba4c # New PJ 
