--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "^13.6.0",
+    "react-native-webview": "13.2.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
