--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -22,13 +23,15 @@
     "expo-router": "^2.0.5",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "^13.2.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
