--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "^0.72.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-webview": "^13.2.2",
