--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "expo": "~49.0.8",
-    "expo-cli": "^6.3.10",
     "expo-constants": "^14.4.2",
-    "expo-font": "^11.4.0",
+    "expo-font": "~11.4.0",
     "expo-linking": "^5.0.2",
     "expo-router": "^2.0.8",
     "expo-splash-screen": "^0.20.5",
@@ -34,9 +34,9 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-picker-select": "^8.1.0",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "^13.2.2",
+    "react-native-webview": "13.2.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
