--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.4",
+    "react-native": "0.72.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
