--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.8",
     "expo-constants": "^14.4.2",
@@ -40,7 +40,8 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "dotenv-webpack": "^8.0.1"
   },
   "private": true
 }
