--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@firebase|firebase/auth)"
+    ],
+    "moduleNameMapper": {
+      "\\./src/home-page/components/BrowseStocks$": "<rootDir>/__mocks__/BrowseStocksMock.js"
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -27,20 +37,24 @@
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
+    "link": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "^13.2.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.3.0",
     "dotenv-webpack": "^8.0.1"
   },
   "private": true
