--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "react-native",
@@ -32,6 +33,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.1",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.8",
     "expo-constants": "^14.4.2",
@@ -44,6 +46,7 @@
     "jest": "^29.2.1",
     "jest-expo": "^49.0.0",
     "link": "^2.1.0",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.72.5",
