--- a/package.json
+++ b/package.json
@@ -49,13 +49,14 @@
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "^0.72.5",
+    "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-webview": "^13.2.2",
     "react-router-dom": "^6.15.0",
     "react-test-renderer": "^18.2.0"
