--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest-expo": "^49.0.0",
     "link": "^2.1.0",
     "patch-package": "^8.0.0",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
@@ -57,6 +58,7 @@
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-webview": "^13.2.2",
     "react-router-dom": "^6.15.0",
     "react-test-renderer": "^18.2.0"
