--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-native-picker-select": "^8.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-webview": "^13.2.2",
     "react-router-dom": "^6.15.0",
     "react-test-renderer": "^18.2.0"
